--- a/publish-subscribe/index.html
+++ b/publish-subscribe/index.html
@@ -8,7 +8,6 @@
 </head>
 <body>
 
-  <script src="pubsub.js"></script>
-  <script src="messager.js"></script>
+  <script src="./lib/bundle.js"></script>
 </body>
 </html>
